rnsc/tests/snapshots/error-lexer-directives-two_dots_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
..
----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/two_dots.rns:1:1 ]
   │
 1 │ ..
   │ ─┬  
   │  ╰── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
